remove annoying time passed message index.html

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         
         document.getElementById('status').innerText = `Reminder set for ${reminderTime.toLocaleString()}`;
 
-        <!--document.getElementById('status').innerText = `Reminder set for ${reminderTime.toLocaleTimeString()}`;-->
-      } <!--else {
-        document.getElementById('status').innerText = "Time already passed. Try again.";
-      }-->
+        //document.getElementById('status').innerText = `Reminder set for ${reminderTime.toLocaleTimeString()}`;
+      } //else {
+        //document.getElementById('status').innerText = "Time already passed. Try again.";
+      //}
     }
   </script>
 </head>
