--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
       const endHour = parseInt(document.getElementById('endHour').value);
       const randomHour = Math.floor(Math.random() * (endHour - startHour + 1)) + startHour;
       const randomMinute = Math.floor(Math.random() * 60);
+      const randomSecond = Math.floor(Math.random() * 60);
       const now = new Date();
       const reminderTime = new Date();
       reminderTime.setHours(randomHour);
       reminderTime.setMinutes(randomMinute);
-      reminderTime.setSeconds(0);
+      reminderTime.setSeconds(randomSecond);
+      //reminderTime.setSeconds(0);
 
       const delay = reminderTime - now;
       if (delay > 0) {
