--- a/index.html
+++ b/index.html
@@ -42,5 +42,6 @@
   <label>End Hour (0–23): <input type="number" id="endHour" value="17"></label><br>
   <button onclick="scheduleReminder()">Set Random Reminder</button>
   <p id="status"></p>
+  <p id="savedReminder"></p>
 </body>
 </html>
